--- a/Fourier transform for rectangle signal.ipynb
+++ b/Fourier transform for rectangle signal.ipynb
@@ -51,14 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +69,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.style.use(\"ggplot\")\n",
+    "# plt.style.use(\"ggplot\")\n",
     "\n",
     "# Setup\n",
     "x_ = np.linspace(-20,20,10000)\n",
@@ -114,6 +107,7 @@
     "    a_n = str(amp_high) + '*sin(pi*n*' +str((1/period)*tau/2) + ')/(pi*n)*cos('+str(2/period)+'*pi*n*t)'\n",
     "    return ('x(t) =' +str(a0) + '+ 2*'+ a_n)\n",
     "\n",
+    "# matplot plot from list\n",
     "y = []\n",
     "f = []\n",
     "signal = 0\n",
@@ -149,22 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40*sin(pi*x/20)*sinc(pi/3)/pi - 20*sin(pi*x/10)*sinc(2*pi/3)/pi"
+       "-3.898171832519376e-17"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.sigma_approximation(3)"
+    "np.sinc(20)"
    ]
   }
  ],
